--- a/responsive_design/10-styles.css
+++ b/responsive_design/10-styles.css
@@ -309,7 +309,8 @@
       display: none;
       flex: 1;
     }
-    .header .nav {
+    .
+    .header.header .nav {
       flex-direction: column;
       overflow: hidden;
       max-height: 0;
