--- a/responsive_design/10-styles.css
+++ b/responsive_design/10-styles.css
@@ -310,7 +310,7 @@
       flex: 1;
     }
     .
-    .header.header .nav {
+    .header .nav {
       flex-direction: column;
       overflow: hidden;
       max-height: 0;
